--- a/composer.json
+++ b/composer.json
@@ -23,7 +23,11 @@
     "autoload": {
         "psr-4": {
             "App\\": "app/"
-        }
+        },
+        "exclude-from-classmap": [
+            "vendor/laravel/pint/app/Providers/AppServiceProvider.php",
+            "vendor/league/flysystem-local/"
+        ]
     },
     "autoload-dev": {
         "psr-4": {
@@ -55,6 +59,9 @@
         "allow-plugins": {
             "pestphp/pest-plugin": true,
             "php-http/discovery": true
+        },
+        "platform": {
+            "php": "8.2.0"
         }
     },
     "minimum-stability": "stable",
